--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,20 @@ services:
   api-service:
     build:
       context: .
-      dockerfile: cmd/api-service/Dockerfile
+      dockerfile: build/api-service/Dockerfile
     command: ["./api-service"]
     environment:
       HTTP_ADDR: ":8080"
       POSTGRES_DSN: "postgres://postgres:postgres@postgres:5432/linkkeeper?sslmode=disable"
     depends_on: [postgres]
     ports: ["8080:8080"]
+
+  bot-service:
+    build:
+      context: .
+      dockerfile: build/bot-service/Dockerfile
+    command: ["./bot-service"]
+    environment:
+      TELEGRAM_TOKEN: "${TELEGRAM_TOKEN}"
+      API_BASE_URL: "http://api-service:8080"
+    depends_on: [api-service]
