--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,17 @@ services:
       POSTGRES_DB: linkkeeper
     ports: ["5432:5432"]
 
+  user-service:
+    build:
+      context: .
+      dockerfile: build/user-service/Dockerfile
+    command: ["./user-service"]
+    environment:
+      HTTP_ADDR: ":8081"
+      POSTGRES_DSN: "postgres://postgres:postgres@postgres:5432/linkkeeper?sslmode=disable"
+    depends_on: [postgres]
+    ports: ["8081:8081"]
+
   api-service:
     build:
       context: .
@@ -26,4 +37,5 @@ services:
     environment:
       TELEGRAM_TOKEN: "${TELEGRAM_TOKEN}"
       API_BASE_URL: "http://api-service:8080"
-    depends_on: [api-service]
+      USER_SERVICE_URL: "http://user-service:8081"
+    depends_on: [api-service, user-service]
