--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -239,7 +239,12 @@ tasks:
     desc: Check Go code with linter
     cmds:
       - go vet ./...
-      - golangci-lint run --timeout=5m || echo "golangci-lint not installed. Run: brew install golangci-lint"
+      - |
+        if ! command -v golangci-lint &> /dev/null; then
+          echo "golangci-lint not installed. Run: brew install golangci-lint"
+          exit 1
+        fi
+        golangci-lint run --timeout=5m
 
   test:
     desc: Run all tests
@@ -261,8 +266,9 @@ tasks:
     cmds:
       - go test -v -race -coverprofile=coverage.out -covermode=atomic ./...
       - go tool cover -html=coverage.out -o coverage.html
-      - echo "Coverage report generated: coverage.html"
-      - go tool cover -func=coverage.out | grep total
+      - |
+        echo "Coverage report generated: coverage.html"
+        go tool cover -func=coverage.out | grep total || true
 
   test:watch:
     desc: Watch and run tests on file changes
