--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,9 @@ jobs:
           cache: true
 
       - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: latest
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b ~/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
         run: |
@@ -85,9 +85,9 @@ jobs:
           go-version: '1.23'
 
       - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: latest
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b ~/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v4
@@ -111,9 +111,9 @@ jobs:
           cache: true
 
       - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: latest
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b ~/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Build all services
         run: |
